Node editor frames don't immediately update to "Toggle Hidden Sockets" #94173

Closed
opened 2021-12-17 00:35:57 +01:00 by Alaska · 7 comments
Member

System Information
Operating system: Linux-5.15.0-2-amd64-x86_64-with-glibc2.32 64 Bits
Graphics card: NA

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-12-16 21:39, hash: da2c564bb0
Worked: 3.0

Bisecting points to d56bbfea7b being the cause.

Short description of error
Here's a video demonstrating the issue:
Frames have a delayed response to toggling hidden node sockets.mp4

Exact steps for others to reproduce the error

  1. Go to a node editor (I used the Shader Editor)
  2. Add a Frame (Shift + A, and search for Frame)
  3. Place a large node into the Frame (I used the Principled BSDF)
  4. Toggle Hidden Node Sockets on the large node with Ctrl + H
  5. Notice how the frame hasn't updated to confirm to the node.
  6. Move your mouse around to force a UI update and notice the frame updating to match the node size.
**System Information** Operating system: Linux-5.15.0-2-amd64-x86_64-with-glibc2.32 64 Bits Graphics card: NA **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-12-16 21:39, hash: `da2c564bb0` Worked: 3.0 Bisecting points to d56bbfea7b being the cause. **Short description of error** Here's a video demonstrating the issue: [Frames have a delayed response to toggling hidden node sockets.mp4](https://archive.blender.org/developer/F12755663/Frames_have_a_delayed_response_to_toggling_hidden_node_sockets.mp4) **Exact steps for others to reproduce the error** 1. Go to a node editor (I used the Shader Editor) 2. Add a `Frame` (`Shift + A`, and search for `Frame`) 3. Place a large node into the `Frame` (I used the Principled BSDF) 4. `Toggle Hidden Node Sockets` on the large node with `Ctrl + H` 5. Notice how the frame hasn't updated to confirm to the node. 6. Move your mouse around to force a UI update and notice the frame updating to match the node size.
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Author
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Author
Member

CC @HooglyBoogly as d56bbfea7b appears to be the culprit commit

CC @HooglyBoogly as d56bbfea7b appears to be the culprit commit
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Hans Goudey self-assigned this 2021-12-17 06:59:50 +01:00

This issue was referenced by d15d512a68

This issue was referenced by d15d512a68f4f8c003de84d7b8e5755bf55d02a7
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94173
No description provided.