source/blender/editors/space_node/node_draw.cc
@@ -2418,9 +2418,11 @@ static void node_update_nodetree(const bContext &C,
     bNode &node = *nodes[i];
     uiBlock &block = *blocks[i];
     if (node.type == NODE_FRAME) {
-      frame_node_prepare_for_draw(node, nodes);
+      /* Frame sizes are calculated after all other nodes have calculating their #totr. */
+      continue;
     }
-    else if (node.type == NODE_REROUTE) {
+
+    if (node.type == NODE_REROUTE) {
       reroute_node_prepare_for_draw(node);
     }
     else {
@@ -2430,6 +2432,13 @@ static void node_update_nodetree(const bContext &C,
       else {
         node_update_basis(C, ntree, node, block);
       }
+    }
+  }
+
+  /* Now calculate the size of frame nodes, which can depend on the size of other nodes. */
+  for (const int i : nodes.index_range()) {
+    if (nodes[i]->type == NODE_FRAME) {
+      frame_node_prepare_for_draw(*nodes[i], nodes);
     }
   }
 }
